--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "cppdbg",
             "request": "launch",
             "preLaunchTask": "debug",
-            "program": "${workspaceFolder}/bin/app",
+            "program": "${workspaceFolder}/bin/bnl",
             "cwd": "${workspaceFolder}",
             "MIMode": "gdb"
         },
@@ -15,7 +15,7 @@
             "type":"cppdbg",
             "request": "launch",
             "preLaunchTask": "release",
-            "program": "${workspaceFolder}/bin/app",
+            "program": "${workspaceFolder}/bin/bnl",
             "cwd": "${workspaceFolder}",
             "MIMode": "gdb"
         }
